--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -1,62 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Profile Page</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link href="../style.css" rel="stylesheet">
-  </head>
 
-  <body onload="displayUser()">
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="home.html">Covid Connect</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="Profile.HTML">Profile</a></li>
-            <li><a href="chatroulette.html">Chat Roulette</a></li>
-            <li><a href="Connections.html">Connections</a></li>
-            <li><a href="connectionafterchat.html">Connection after chat</a></li>
-            <li><a href="rating.html">Rating</a></li>
-            <li><a href="individualchat.html">Individual Chat</a></li>
-            <li><a href="supportpage.html">Support Page</a></li>
-            <li><a href="supportchat.html">Support Chat</a></li>
-            <li><a href="settings.html">Settings</a></li>
-          </ul>
-        </div>
+<head>
+  <title>Profile Page</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link href="../style.css" rel="stylesheet">
+  <script src="../script.js"></script>
+</head>
+
+<body onload="displayUser()">
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="home.html">Covid Connect</a>
       </div>
-    </nav>
-    <div class="container-fluid text-center">
-      <div class="row content">
-        <div class="col-md-4">
-          <hr>
-          <div class="well" style="margin-left:10%; width:80%; height:80%; margin-bottom:2%; float:center;">
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li><a href="home.html">Home</a></li>
+          <li><a href="Profile.HTML">Profile</a></li>
+          <li><a href="chatroulette.html">Chat Roulette</a></li>
+          <li><a href="Connections.html">Connections</a></li>
+          <li><a href="connectionafterchat.html">Connection after chat</a></li>
+          <li><a href="rating.html">Rating</a></li>
+          <li><a href="individualchat.html">Individual Chat</a></li>
+          <li><a href="supportpage.html">Support Page</a></li>
+          <li><a href="supportchat.html">Support Chat</a></li>
+          <li><a href="settings.html">Settings</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container-fluid text-center">
+    <div class="row content">
+      <div class="col-md-4">
+        <hr>
+        <div class="well" style="margin-left:10%; width:80%; height:80%; margin-bottom:2%; float:center;">
           <h1 id="usernameDis"></h1>
           <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
           <h4>Name</h4>
           <h4>Age</h4>
         </div>
-        </div>
-        <div class="col-md-8 mb-5 text-left">
-          <hr>
-          <h1>About You</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <p>Integer ornare augue eget ante faucibus ornare. Vivamus volutpat est ipsum, interdum congue ligula tempor quis. Mauris eget pulvinar nibh. Aenean congue, nunc nec consectetur consequat, lectus elit gravida justo, at dapibus nibh odio fermentum diam. Nunc consectetur scelerisque eros ut viverra. Fusce sodales scelerisque massa dignissim scelerisque. Pellentesque et lectus at diam tincidunt pellentesque sit amet eu odio. Morbi vel nisl quis nulla placerat maximus. Duis ut interdum est qurdsg.</p>
-        </div>
+      </div>
+      <div class="col-md-8 mb-5 text-left">
+        <hr>
+        <h1>About You</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+          nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Integer ornare augue eget ante faucibus ornare. Vivamus volutpat est ipsum, interdum congue ligula tempor quis. Mauris eget pulvinar nibh. Aenean congue, nunc nec consectetur consequat, lectus elit gravida justo, at dapibus nibh odio
+          fermentum diam. Nunc consectetur scelerisque eros ut viverra. Fusce sodales scelerisque massa dignissim scelerisque. Pellentesque et lectus at diam tincidunt pellentesque sit amet eu odio. Morbi vel nisl quis nulla placerat maximus. Duis ut
+          interdum est qurdsg.</p>
+      </div>
 
-    <footer class="container-fluid text-center">
-      <p>Covid Connect Footer</p>
-    </footer>
-    <script src="../script.js"></script>
-  </body>
+      <footer class="container-fluid text-center">
+        <p>Covid Connect Footer</p>
+      </footer>
+</body>
+
 </html>
