--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -1,98 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Chat Roulette Page</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link href="../style.css" rel="stylesheet">
-  </head>
 
-  <body>
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="home.html">Covid Connect</a>
+<head>
+  <title>Chat Roulette Page</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link href="../style.css" rel="stylesheet">
+  <script src="../script.js"></script>
+
+</head>
+
+<body>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="home.html">Covid Connect</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li><a href="home.html">Home</a></li>
+          <li><a href="Profile.HTML">Profile</a></li>
+          <li><a href="chatroulette.html">Chat Roulette</a></li>
+          <li><a href="Connections.html">Connections</a></li>
+          <li><a href="connectionafterchat.html">Connection after chat</a></li>
+          <li><a href="rating.html">Rating</a></li>
+          <li><a href="individualchat.html">Individual Chat</a></li>
+          <li><a href="supportpage.html">Support Page</a></li>
+          <li><a href="supportchat.html">Support Chat</a></li>
+          <li><a href="settings.html">Settings</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container-fluid text-center">
+    <div class="row content">
+      <div class="col-sm-2 sidenav">
+        <h2>Online Connections</h2>
+        <p><a href="#">Tegan Jennings</a></p>
+        <p><a href="#">Emanuel Ivan</a></p>
+        <p><a href="#">Luke Kavanagh</a></p>
+        <p><a href="#">Oisin Hogan</a></p>
+        <p><a href="#">Sean Hallahan</a></p>
+        <p><a href="#">Jane Doe</a></p>
+        <p><a href="#">Michael Murphy</a></p>
+        <p><a href="#">Karen O'Brien</a></p>
+        <p><a href="#">James Deegan</a></p>
+        <p><a href="#">Ava Hannagan</a></p>
+        <p><a href="#">Damon Salvatore</a></p>
+        <p><a href="#">Klaus Michaelson</a></p>
+
+      </div>
+      <div class="col-sm-8 text-left">
+        <h1 id="chatr">Chatroulette</h1>
+        <div class="container">
+          <img src="../user1.png" alt="Avatar">
+          <p>Hello. How are you today?</p>
+          <span class="time-right">11:00</span>
         </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="Profile.HTML">Profile</a></li>
-            <li><a href="chatroulette.html">Chat Roulette</a></li>
-            <li><a href="Connections.html">Connections</a></li>
-            <li><a href="connectionafterchat.html">Connection after chat</a></li>
-            <li><a href="rating.html">Rating</a></li>
-            <li><a href="individualchat.html">Individual Chat</a></li>
-            <li><a href="supportpage.html">Support Page</a></li>
-            <li><a href="supportchat.html">Support Chat</a></li>
-            <li><a href="settings.html">Settings</a></li>
-          </ul>
+
+        <div class="container darker">
+          <img src="../user2.jpg" alt="Avatar" class="right">
+          <p>Hey! I'm fine. Thanks for asking!</p>
+          <span class="time-left">11:01</span>
+        </div>
+
+        <div class="container">
+          <img src="../user1.png" alt="Avatar">
+          <p>Sweet! So, what do you wanna do today?</p>
+          <span class="time-right">11:02</span>
+        </div>
+
+        <div class="container darker">
+          <img src="../user2.jpg" alt="Avatar" class="right">
+          <p>Nah, I dunno. Play soccer.. or learn more coding perhaps?</p>
+          <span class="time-left">11:05</span>
         </div>
       </div>
-    </nav>
-    <div class="container-fluid text-center">
-      <div class="row content">
-        <div class="col-sm-2 sidenav">
-          <h2>Online Connections</h2>
-          <p><a href="#">Tegan Jennings</a></p>
-          <p><a href="#">Emanuel Ivan</a></p>
-          <p><a href="#">Luke Kavanagh</a></p>
-          <p><a href="#">Oisin Hogan</a></p>
-          <p><a href="#">Sean Hallahan</a></p>
-          <p><a href="#">Jane Doe</a></p>
-          <p><a href="#">Michael Murphy</a></p>
-          <p><a href="#">Karen O'Brien</a></p>
-          <p><a href="#">James Deegan</a></p>
-          <p><a href="#">Ava Hannagan</a></p>
-          <p><a href="#">Damon Salvatore</a></p>
-          <p><a href="#">Klaus Michaelson</a></p>
-
+      <div class="col-sm-2 sidenav">
+        <div class="well">
+          <p><a href="chatroulette.html">Connnet with a Gamer!</a></p>
         </div>
-        <div class="col-sm-8 text-left">
-          <h1 id="chatr">Chatroulette</h1>
-          <div class="container">
-            <img src="../user1.png" alt="Avatar">
-            <p>Hello. How are you today?</p>
-            <span class="time-right">11:00</span>
-          </div>
-
-          <div class="container darker">
-            <img src="../user2.jpg" alt="Avatar" class="right">
-            <p>Hey! I'm fine. Thanks for asking!</p>
-            <span class="time-left">11:01</span>
-          </div>
-
-          <div class="container">
-            <img src="../user1.png" alt="Avatar">
-            <p>Sweet! So, what do you wanna do today?</p>
-            <span class="time-right">11:02</span>
-          </div>
-
-          <div class="container darker">
-            <img src="../user2.jpg" alt="Avatar" class="right">
-            <p>Nah, I dunno. Play soccer.. or learn more coding perhaps?</p>
-            <span class="time-left">11:05</span>
-          </div>
+        <div class="well">
+          <p><a href="chatroulette.html">Connect with someone in Quarintine!</a></p>
         </div>
-        <div class="col-sm-2 sidenav">
-          <div class="well">
-            <p><a href ="chatroulette.html">Connnet with a Gamer!</a></p>
-          </div>
-          <div class="well">
-            <p><a href ="chatroulette.html">Connect with someone in Quarintine!</a></p>
-          </div>
-          <div class="well">
-            <p><a href="rating.html">Rate your Chat!</a></p>
-          </div>
-          <div class="well">
-            <p><a href="Connections.html">View Connections!</a></p>
-          </div>
+        <div class="well">
+          <p><a href="rating.html">Rate your Chat!</a></p>
+        </div>
+        <div class="well">
+          <p><a href="Connections.html">View Connections!</a></p>
         </div>
       </div>
     </div>
-    <footer class="container-fluid text-center">
-      <p>Covid Connect Footer</p>
-    </footer>
-  </body>
+  </div>
+  <footer class="container-fluid text-center">
+    <p>Covid Connect Footer</p>
+  </footer>
+</body>
+
 </html>
