Chat roulette nav

--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -80,16 +80,10 @@
       </div>
       <div class="col-sm-2 sidenav">
         <div class="well">
-          <p><a href="chatroulette.html">Connnet with a Gamer!</a></p>
-        </div>
-        <div class="well">
-          <p><a href="chatroulette.html">Connect with someone in Quarintine!</a></p>
-        </div>
-        <div class="well">
           <p><a href="rating.html">Rate your Chat!</a></p>
         </div>
         <div class="well">
-          <p><a href="Connections.html">View Connections!</a></p>
+          <p><a href="connectionafterchat.html">Connect with this person!</a></p>
         </div>
       </div>
     </div>
