--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -40,37 +40,37 @@
       <div class="container">
         <h4>Personal Information</h4>
         <hr>
-        <h4>Username: <input type="text" class="input" value="JaneDoe123"></h4>
-        <h4>Full Name: <input type="text" class="input" value="Jane Doe"></h4>
-        <h4>Email: <input type="text" class="input" value="example@example.ie"></h4>
-        <h5>Profile Picture:<form action="upload.php" method="post"><input type="file" name="file" id="file"/></form></h5>
+        <h5>Username: <input type="text" class="input" value="JaneDoe123"></h5>
+        <h5>Full Name: <input type="text" class="input" value="Jane Doe"></h5>
+        <h5>Email: <input type="text" class="input" value="example@example.ie"></h5>
+        <h5><form action="upload.php" method="post">Profile Picture:<input type="file" name="file" id="file"/></form></h5>
         <br>
         <button class="btn">Update</button>
       </div>
       <div class="container">
         <h4>Other Information</h4>
         <hr>
-        <h4>Date of Birth: <input type="text" class="input" value="20th April 1999"></h4>
-        <h4>Gender:
+        <h5>Date of Birth: <input type="text" class="input" value="20th April 1999"></h5>
+        <h5>Gender:
           <input type="radio" name="gender" value="male"> Male
           <input type="radio" name="gender" value="female"> Female
-        </h4>
+        </h5>
         <br>
         <button class="btn">Update</button>
       </div>
       <div class="container">
         <h4>Password Protection</h4>
         <hr>
-        <h3>You can update your password here!</h3>
-        <h4>Password: <input type="password" class="input" value="password"></h4>
-        <h4>Confirm new password: <input type="password" class="input" value=""></h4>
+        <h5>You can update your password here!</h5>
+        <h5>Password: <input type="password" class="input" value="password"></h5>
+        <h5>Confirm new password: <input type="password" class="input" value=""></h5>
         <br>
         <button class="btn">Update</button>
       </div>
       <div class="container">
         <h4>Account Deletion</h4>
         <hr>
-        <h3>Deleting your account is permanent. This account cannot be undone.</h3>
+        <h4>Deleting your account is permanent. This account cannot be undone.</h4>
         <button class="btn" style="background-color:red;">Permanently Delete Account</button>
       </div>
     </div>
