--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -12,14 +12,10 @@
 </head>
 
 <body onload="displayUser()">
+  <!-- Navigation -->
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
         <a class="navbar-brand" href="home.html">Covid Connect</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
@@ -28,8 +24,6 @@
           <li><a href="Profile.HTML">Profile</a></li>
           <li><a href="chatroulette.html">Chat Roulette</a></li>
           <li><a href="Connections.html">Connections</a></li>
-          <li><a href="connectionafterchat.html">Connection after chat</a></li>
-          <li><a href="rating.html">Rating</a></li>
           <li><a href="individualchat.html">Individual Chat</a></li>
           <li><a href="supportpage.html">Support Page</a></li>
           <li><a href="supportchat.html">Support Chat</a></li>
