--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -35,17 +35,19 @@
   <div class="container-fluid">
     <div class="row content" style="text-align:center;">
       <h3>Account Settings</h3>
-      <div class="container">
+      <div class="settingscontainer">
         <h4>Personal Information</h4>
         <hr>
         <h5>Username: <input type="text" class="input" value="JaneDoe123"></h5>
         <h5>Full Name: <input type="text" class="input" value="Jane Doe"></h5>
         <h5>Email: <input type="text" class="input" value="example@example.ie"></h5>
-        <h5><form action="upload.php" method="post">Profile Picture:<input type="file" name="file" id="file"/></form></h5>
+        <h5>
+          <form action="upload.php" method="post">Profile Picture:<input type="file" name="file" id="file" /></form>
+        </h5>
         <br>
         <button class="btn">Update</button>
       </div>
-      <div class="container">
+      <div class="settingscontainer">
         <h4>Other Information</h4>
         <hr>
         <h5>Date of Birth: <input type="text" class="input" value="20th April 1999"></h5>
@@ -56,7 +58,7 @@
         <br>
         <button class="btn">Update</button>
       </div>
-      <div class="container">
+      <div class="settingscontainer">
         <h4>Password Protection</h4>
         <hr>
         <h5>You can update your password here!</h5>
@@ -65,7 +67,7 @@
         <br>
         <button class="btn">Update</button>
       </div>
-      <div class="container">
+      <div class="settingscontainer">
         <h4>Account Deletion</h4>
         <hr>
         <h4>Deleting your account is permanent. This account cannot be undone.</h4>
