--- a/Webpages/Connections.html
+++ b/Webpages/Connections.html
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Connections Page</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link href="../style.css" rel="stylesheet">
-  </head>
 
-  <body>
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="home.html">Covid Connect</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="Profile.HTML">Profile</a></li>
-            <li><a href="chatroulette.html">Chat Roulette</a></li>
-            <li><a href="Connections.html">Connections</a></li>
-            <li><a href="connectionafterchat.html">Connection after chat</a></li>
-            <li><a href="rating.html">Rating</a></li>
-            <li><a href="individualchat.html">Individual Chat</a></li>
-            <li><a href="supportpage.html">Support Page</a></li>
-            <li><a href="supportchat.html">Support Chat</a></li>
-            <li><a href="settings.html">Settings</a></li>
-          </ul>
-        </div>
+<head>
+  <title>Connections Page</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link href="../style.css" rel="stylesheet">
+  <script src="../script.js"></script>
+</head>
+
+<body>
+  <!-- Navigation -->
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="home.html">Covid Connect</a>
       </div>
-    </nav>
-    <div class="container-fluid text-center">
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li><a href="home.html">Home</a></li>
+          <li><a href="Profile.HTML">Profile</a></li>
+          <li><a href="chatroulette.html">Chat Roulette</a></li>
+          <li><a href="Connections.html">Connections</a></li>
+          <li><a href="individualchat.html">Individual Chat</a></li>
+          <li><a href="supportpage.html">Support Page</a></li>
+          <li><a href="supportchat.html">Support Chat</a></li>
+          <li><a href="settings.html">Settings</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container-fluid text-center">
+    <div class="row content">
       <div class="row content">
-        <div class="row content">
-          <div class="col-sm-12">
+        <div class="col-sm-12">
           <h1 style="text-decoration:underline; font-weight:bold;">Connections</h1>
         </div>
         <div class="col-sm-3 text-center">
@@ -50,18 +51,18 @@
           <h4>Name</h4>
           <button style="">Chat Now!</button>
         </div>
-         <div class="col-sm-3 text-center">
-           <hr>
-           <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
+        <div class="col-sm-3 text-center">
+          <hr>
+          <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
           <h4>Name</h4>
-           <button style="">Chat Now!</button>
-         </div>
-         <div class="col-sm-3 text-center">
-           <hr>
-           <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
-           <h4>Name</h4>
-           <button style="">Chat Now!</button>
-         </div>
+          <button style="">Chat Now!</button>
+        </div>
+        <div class="col-sm-3 text-center">
+          <hr>
+          <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
+          <h4>Name</h4>
+          <button style="">Chat Now!</button>
+        </div>
       </div>
       <div class="row content">
         <div class="col-sm-12">
@@ -89,11 +90,11 @@
             <h4>Name</h4>
             <button style="">Chat Now!</button>
           </div>
+        </div>
       </div>
     </div>
-    </div>
 
-  </body>
+</body>
 
 
 </html>
