--- a/Webpages/individualchat.html
+++ b/Webpages/individualchat.html
@@ -1,47 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Individual Chat</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link href="../style.css" rel="stylesheet">
 
+<head>
+  <title>Individual Chat</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link href="../style.css" rel="stylesheet">
+  <script src="../script.js"></script>
+  <style>
+    /* Set black background color, white text and some padding */
+    footer {
+      background-color: #555;
+      color: white;
+      padding: 15px;
+    }
+  </style>
+</head>
 
-    <style>
-      /* Set black background color, white text and some padding */
-      footer {
-        background-color: #555;
-        color: white;
-        padding: 15px;
-      }
-    </style>
-  </head>
-  <body>
+<body>
 
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="home.html">Covid Connect</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="Profile.HTML">Profile</a></li>
-            <li><a href="chatroulette.html">Chat Roulette</a></li>
-            <li><a href="Connections.html">Connections</a></li>
-            <li><a href="connectionafterchat.html">Connection after chat</a></li>
-            <li><a href="rating.html">Rating</a></li>
-            <li><a href="individualchat.html">Individual Chat</a></li>
-            <li><a href="supportpage.html">Support Page</a></li>
-            <li><a href="supportchat.html">Support Chat</a></li>
-            <li><a href="settings.html">Settings</a></li>
-          </ul>
-        </div>
+  <!-- Navigation -->
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="home.html">Covid Connect</a>
       </div>
-    </nav>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li><a href="home.html">Home</a></li>
+          <li><a href="Profile.HTML">Profile</a></li>
+          <li><a href="chatroulette.html">Chat Roulette</a></li>
+          <li><a href="Connections.html">Connections</a></li>
+          <li><a href="individualchat.html">Individual Chat</a></li>
+          <li><a href="supportpage.html">Support Page</a></li>
+          <li><a href="supportchat.html">Support Chat</a></li>
+          <li><a href="settings.html">Settings</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
   <div class="container text-center">
     <div class="row">
@@ -88,8 +87,8 @@
         <div class="row">
           <div class="col-sm-3">
             <div class="well">
-             <p>John</p>
-             <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+              <p>John</p>
+              <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
             </div>
           </div>
           <div class="col-sm-9">
@@ -101,8 +100,8 @@
         <div class="row">
           <div class="col-sm-3">
             <div class="well">
-             <p>Bo</p>
-             <img src="bandmember.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+              <p>Bo</p>
+              <img src="bandmember.jpg" class="img-circle" height="55" width="55" alt="Avatar">
             </div>
           </div>
           <div class="col-sm-9">
@@ -114,8 +113,8 @@
         <div class="row">
           <div class="col-sm-3">
             <div class="well">
-             <p>Jane</p>
-             <img src="bandmember.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+              <p>Jane</p>
+              <img src="bandmember.jpg" class="img-circle" height="55" width="55" alt="Avatar">
             </div>
           </div>
           <div class="col-sm-9">
@@ -127,8 +126,8 @@
         <div class="row">
           <div class="col-sm-3">
             <div class="well">
-             <p>Anja</p>
-             <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+              <p>Anja</p>
+              <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
             </div>
           </div>
           <div class="col-sm-9">
@@ -160,9 +159,11 @@
     <p>Footer Text</p>
   </footer>
 
-  </body>
-  </html>
+</body>
 
-        Individual chat yo
-      </body>
-  </html>
+</html>
+
+Individual chat yo
+</body>
+
+</html>
