--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -1,81 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Settings Page</title>
-    <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-     <link href="../style.css" rel="stylesheet">
-     <script src="vendor/jquery/jquery.min.js"></script>
-     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-   </head>
-    <body onload="displaySettings()">
-      <!-- Navigation -->
-      <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="home.html">Covid Connect</a>
-          </div>
-          <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-              <li><a href="home.html">Home</a></li>
-              <li><a href="Profile.HTML">Profile</a></li>
-              <li><a href="chatroulette.html">Chat Roulette</a></li>
-              <li><a href="Connections.html">Connections</a></li>
-              <li><a href="connectionafterchat.html">Connection after chat</a></li>
-              <li><a href="rating.html">Rating</a></li>
-              <li><a href="individualchat.html">Individual Chat</a></li>
-              <li><a href="supportpage.html">Support Page</a></li>
-              <li><a href="supportchat.html">Support Chat</a></li>
-              <li><a href="settings.html">Settings</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-     <div class="container-fluid">
-       <div class="row content">
-         <div class="col-sm-3 sidenav">
-           <h3><a href"settings.html">Settings</a></h3>
-           <br>
-           <ul class="nav nav-pills nav-stacked">
-             <div cnotifications.htmllass="input-group">
-               <input type="text" class="form-control" placeholder="Search Settings..">
-               <span class="input-group-btn">
-                 <button class="btn btn-default" type="button">
-                   <span class="glyphicon glyphicon-search"></span>
-                 </button>
-               </span>
-             </div>
-             <li><a href="settings.html">Personal Information</a></li>
-             <li><a href="privacy.html">Privacy Settings</a></li>
-             <li><a href="billing.html">Billing Settings</a></li>
-             <li><a href="notifications.html">Notifications Settings</a></li>
-           </ul><br>
-         </div>
-         <div class="col-sm-9">
-           <h1>Settings</h1>
-           <h2>Personal Info</h2>
-           <hr>
-           <h3>Full Name</h3>
-           <input type="text" class="input" value="Jane Doe">
-           <h3>Birthday</h3>
-           <input type="text" class="input" value="20th April 1999">
-           <h3>Gender</h3>
-           <input type="text" class="input" value="Female">
-           <h3>Email</h3>
-           <input type="text" class="input" value="example@example.ie">
-           <h3>Password</h3>
-           <input type="password" class="input" value="password">
-           <br>
-           <button class="btn" style="margin-bottom:20%;" onclick="displaySettings()">Test</button>
-         </div>
-       </div>
-     </div>
-     <footer class="container-fluid text-center">
-       <p>Covid Connect Footer</p>
-     </footer>
-     <script src="../script.js"></script>
-   </body>
+
+<head>
+  <title>Settings Page</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="../script.js"></script>
+  <link href="../style.css" rel="stylesheet">
+</head>
+
+<body onload="displaySettings()" style="background-image: url('../bgsettings.png');">
+  <!-- Navigation -->
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="home.html">Covid Connect</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li><a href="home.html">Home</a></li>
+          <li><a href="Profile.HTML">Profile</a></li>
+          <li><a href="chatroulette.html">Chat Roulette</a></li>
+          <li><a href="Connections.html">Connections</a></li>
+          <li><a href="individualchat.html">Individual Chat</a></li>
+          <li><a href="supportpage.html">Support Page</a></li>
+          <li><a href="supportchat.html">Support Chat</a></li>
+          <li><a href="settings.html">Settings</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container-fluid">
+    <div class="row content" style="text-align:center;">
+      <h3>Account Settings</h3>
+      <div class="settingscontainer">
+        <h4>Personal Information</h4>
+        <hr>
+        <h5>Username: <input type="text" class="input" value="JaneDoe123"></h5>
+        <h5>Full Name: <input type="text" class="input" value="Jane Doe"></h5>
+        <h5>Email: <input type="text" class="input" value="example@example.ie"></h5>
+        <h5>
+          <form action="upload.php" method="post">Profile Picture:<input type="file" name="file" id="file" /></form>
+        </h5>
+        <br>
+        <button class="btn">Update</button>
+      </div>
+      <div class="settingscontainer">
+        <h4>Other Information</h4>
+        <hr>
+        <h5>Date of Birth: <input type="text" class="input" value="20th April 1999"></h5>
+        <h5>Gender:
+          <input type="radio" name="gender" value="male"> Male
+          <input type="radio" name="gender" value="female"> Female
+        </h5>
+        <br>
+        <button class="btn">Update</button>
+      </div>
+      <div class="settingscontainer">
+        <h4>Password Protection</h4>
+        <hr>
+        <h5>You can update your password here!</h5>
+        <h5>Password: <input type="password" class="input" value="password"></h5>
+        <h5>Confirm new password: <input type="password" class="input" value=""></h5>
+        <br>
+        <button class="btn">Update</button>
+      </div>
+      <div class="settingscontainer">
+        <h4>Account Deletion</h4>
+        <hr>
+        <h4>Deleting your account is permanent. This account cannot be undone.</h4>
+        <button class="btn" style="background-color:red;">Permanently Delete Account</button>
+      </div>
+    </div>
+  </div>
+  <footer class="container-fluid text-center">
+    <p>Covid Connect Footer</p>
+  </footer>
+</body>
+
 </html>
