--- a/index.html
+++ b/index.html
@@ -1,80 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Login and Registration</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link href="style.css" rel="stylesheet">
-  </head>
-  <body>
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="index.html">Covid Connect</a>
-        </div>
 
+<head>
+  <title>Login and Registration</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link href="style.css" rel="stylesheet">
+  <script src="script.js"></script>
+
+</head>
+
+<body>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="index.html">Covid Connect</a>
       </div>
-    </nav>
-    <div class="login-wrap">
-    	<div class="login-html">
-    		<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
-    		<input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
-    		<div class="login-form">
-    			<div class="sign-in-htm">
-    				<div class="group">
-    					<label for="user" class="label">Username</label>
-    					<input id="username" type="text" class="input">
-    				</div>
-    				<div class="group">
-    					<label for="pass" class="label">Password</label>
-    					<input id="password" type="password" class="input" data-type="password">
-    				</div>
-    				<div class="group">
-    					<input id="check" type="checkbox" class="check" checked>
-    					<label for="check"><span class="icon"></span> Keep me Signed in</label>
-    				</div>
-    				<div class="group">
-    					<input type="submit" class="button" value="Sign In" onclick="processDetails()">
-    				</div>
-    				<div class="hr"></div>
-    				<div class="foot-lnk">
-    					<a href="#forgot">Forgot Password?</a>
-    				</div>
-    			</div>
-    			<div class="sign-up-htm">
-    				<div class="group">
-    					<label for="user" class="label">Username</label>
-    					<input id="NewUser" type="text" class="input">
-    				</div>
-    				<div class="group">
-    					<label for="pass" class="label">Password</label>
-    					<input id="NewPass" type="password" class="input" data-type="password">
-    				</div>
-    				<div class="group">
-    					<label for="pass" class="label">Repeat Password</label>
-    					<input id="NewpassTwo" type="password" class="input" data-type="password">
-    				</div>
-    				<div class="group">
-    					<label for="pass" class="label">Email Address</label>
-    					<input id="Email" type="text" class="input">
-    				</div>
-    				<div class="group">
-    					<input type="submit" class="button" value="Sign Up" onclick="createUser()">
-    				</div>
-    				<div class="hr"></div>
-    				<div class="foot-lnk">
-    					<label for="tab-1">Already Member?</a>
-    				</div>
-    			</div>
-    		</div>
-    	</div>
+
     </div>
-    <footer class="container-fluid text-center">
-      <p>Covid Connect Footer</p>
-    </footer>
-    <script src="script.js"></script>
-  </body>
+  </nav>
+  <div class="login-wrap">
+    <div class="login-html">
+      <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
+      <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
+      <div class="login-form">
+        <div class="sign-in-htm">
+          <div class="group">
+            <label for="user" class="label">Username</label>
+            <input id="username" type="text" class="input">
+          </div>
+          <div class="group">
+            <label for="pass" class="label">Password</label>
+            <input id="password" type="password" class="input" data-type="password">
+          </div>
+          <div class="group">
+            <input id="check" type="checkbox" class="check" checked>
+            <label for="check"><span class="icon"></span> Keep me Signed in</label>
+          </div>
+          <div class="group">
+            <input type="submit" class="button" value="Sign In" onclick="processDetails()">
+          </div>
+          <div class="hr"></div>
+          <div class="foot-lnk">
+            <a href="#forgot">Forgot Password?</a>
+          </div>
+        </div>
+        <div class="sign-up-htm">
+          <div class="group">
+            <label for="user" class="label">Username</label>
+            <input id="NewUser" type="text" class="input">
+          </div>
+          <div class="group">
+            <label for="pass" class="label">Password</label>
+            <input id="NewPass" type="password" class="input" data-type="password">
+          </div>
+          <div class="group">
+            <label for="pass" class="label">Repeat Password</label>
+            <input id="NewpassTwo" type="password" class="input" data-type="password">
+          </div>
+          <div class="group">
+            <label for="pass" class="label">Email Address</label>
+            <input id="Email" type="text" class="input">
+          </div>
+          <div class="group">
+            <input type="submit" class="button" value="Sign Up" onclick="createUser()">
+          </div>
+          <div class="hr"></div>
+          <div class="foot-lnk">
+            <label for="tab-1">Already Member?</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class="container-fluid text-center">
+    <p>Covid Connect Footer</p>
+  </footer>
+</body>
+
 </html>
