--- a/Webpages/rating.html
+++ b/Webpages/rating.html
@@ -37,8 +37,6 @@
       <div class="col-sm-12 text-center" style="padding:0px;">
         <h1 style="text-decoration:underline; font-weight:bold;">Rate your chat!</h1>
         <p>Please rate your conversation.</p>
-        <button>Rate Now!</button>
-        <button>Skip Rating</button>
         <form action="">
           <fieldset>
             <div class="rating">
@@ -50,6 +48,10 @@
             </div>
           </fieldset>
         </form>
+        <button>Rate</button>
+        <p>Would you like to connect with this user?</p>
+        <button>Connect Now!</button>
+        <button>Skip</button>
         <div class="well" style="margin-left:1%; width:20%; height:20%; margin-bottom:2%; float:left;">
           <img src="../Imgs/PfpPlaceholder.png" width="80%" height="80%"></img>
           <h3>You</h3>
