getting chat roulette feauture started

--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -67,15 +67,24 @@
         <div class="container">
           <img src="../user1.png" alt="Avatar">
           <p>Sweet! So, what do you wanna do today?</p>
-          <span class="time-right">11:02</span>
+        How to build your own real-time chat app
+  <span class="time-right">11:02</span>
         </div>
 
-        <div class="container darker">
-          <img src="../user2.jpg" alt="Avatar" class="right">
-          <p>Nah, I dunno. Play soccer.. or learn more coding perhaps?</p>
-          <span class="time-left">11:05</span>
+        <div id="message-container">
+          <form id="send-container">
+            <input type="text" id="message-input">
+              <button type="submit" id="send-button">Send</button>
+          </form>
+
         </div>
       </div>
+
+
+
+
+
+
       <div class="col-sm-2 sidenav">
         <div class="well">
           <p><a href="rating.html">Rate your Chat!</a></p>
