small spelling mistake and individual chat test 1

--- a/Webpages/home.html
+++ b/Webpages/home.html
@@ -61,7 +61,7 @@
           (086) 216 3521
           <br>
           <abbr title="Email">E:</abbr>
-          <a href="mailto:#">convidconnect@convidconnect.com</a>
+          <a href="mailto:#">covidconnect@covidconnect.com</a>
         </address>
       </div>
     </div>
