Settings page remove user feature

--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -70,7 +70,7 @@
         <h4>Account Deletion</h4>
         <hr>
         <h4>Deleting your account is permanent. This account cannot be undone.</h4>
-        <button class="btn" style="background-color:red;">Permanently Delete Account</button>
+        <button onclick="deleteUser()" class="btn" style="background-color:red;">Permanently Delete Account</button>
       </div>
     </div>
   </div>
