--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Support Page</title>
+  <title>Support</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -27,7 +27,7 @@
           <li><a href="chatroulette.html">Chat Roulette</a></li>
           <li><a href="Connections.html">Connections</a></li>
           <li><a href="individualchat.html">Individual Chat</a></li>
-          <li><a href="supportpage.html">Support Page</a></li>
+          <li><a href="supportpage.html">Support</a></li>
           <li><a href="settings.html">Settings</a></li>
         </ul>
       </div>
