--- a/Webpages/chat.html
+++ b/Webpages/chat.html
@@ -34,7 +34,7 @@ s=a.createElement('script');s.async=1;s.src="https://cdn.talkjs.com/talk.js";a.h
           <li><a href="chatroulette.html">Chat Roulette</a></li>
           <li><a href="Connections.html">Connections</a></li>
           <li><a href="individualchat.html">Individual Chat</a></li>
-          <li><a href="supportpage.html">Support Page</a></li>
+          <li><a href="supportpage.html">Support</a></li>
           <li><a href="settings.html">Settings</a></li>
         </ul>
       </div>
