Connection Changes from Earlier

--- a/Webpages/Connections.html
+++ b/Webpages/Connections.html
@@ -38,7 +38,6 @@
         <div class="col-sm-12">
           <h1 style="text-decoration:underline; font-weight:bold;">Connections</h1>
         </div>
-<<<<<<< HEAD
       </div>
       <div class="row content">
         <div class="col-sm-12">
@@ -74,41 +73,48 @@
             <button style="">Chat Now!</button>
           </div>
           </div>
-=======
+
         <div class="col-sm-3 text-center">
+          <div id="ConColour">
           <hr>
           <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
           <h4>Name</h4>
 
           <div class="chat-popup" id="myForm">
-          <form action="/action_page.php" class="form-container">
+          <form action="" class="form-container">
           <button style="">Chat Now!</button>
           <label for="msg"><b>Message</b></label>
-          <textarea placeholder="Type message.." name="msg" required></textarea>
+          <textarea placeholder="Type message here.." name="msg" required></textarea>
           <button type="submit" class="btn">Send</button>
           <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
          </form>
         </div>
         </div>
+      </div>
         <div class="col-sm-3 text-center">
+          <div id="ConColour">
           <hr>
           <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
           <h4>Name</h4>
           <button style="">Chat Now!</button>
         </div>
+      </div>
         <div class="col-sm-3 text-center">
+          <div id="ConColour">
           <hr>
           <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
           <h4>Name</h4>
           <button style="">Chat Now!</button>
         </div>
+      </div>
         <div class="col-sm-3 text-center">
+          <div id="ConColour">
           <hr>
           <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
           <h4>Name</h4>
           <button style="">Chat Now!</button>
->>>>>>> fa3bff63e32bab1d526f56005892287bacf30890
         </div>
+      </div>
       </div>
 
       <div class="row content">
