--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -61,7 +61,7 @@
         <h5>Password: <input type="password" id="password" class="input"></h5>
         <h5>Confirm new password: <input type="password" class="input" value=""></h5>
         <br>
-        <button class="btn">Update</button>
+        <button onclick="updateSettings()" class="btn">Update</button>
       </div>
       <div class="settingscontainer">
         <h4>Account Deletion</h4>
