testing heroku connection

--- a/Webpages/individualchat.html
+++ b/Webpages/individualchat.html
@@ -164,7 +164,9 @@
   <div id="talkjs-container" style="width: 90%; margin: 30px; height: 500px">
       <i>Loading chat...</i>
   </div>
-
+<!>
+comment
+</!>
   <script>
   await Talk.ready;
   const me = new Talk.User({
